<resources>
    <string name="app_name">Magic Design</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_of_services_and_privacy_policy">By creating an account, you agree to our <b>Terms Of Services</b> and <b> Privacy Policy.</b></string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in">Sign in </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="tv_create">Don\'t have an account ? Swipe rigt to <b>Create a new account.</b></string>
    <string name="country_isd_code">Country ISD Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="otp">OTP</string>
    <string name="enter_your_otp">"Enter Your OTP "</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">Submit</string>
    <string name="my_account">My Account</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="country">Country:</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="area">Area:</string>
    <string name="my_file_formats">My File Formats</string>
    <string name="how_to_use">How To Use Application?</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="nav_header_title">Title</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="registration">Registration</string>
    <string name="how_to_use_">How to Use?</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="detail">Detail</string>
    <string name="select_country_code">Select Country  </string>
    <string name="result_not_found">Result not found</string>
    <string name="logout">Logout</string>
    <string name="downloaded_files">Downloaded Designs</string>
    <string name="my_profile">My Profile</string>
    <string name="admin_message">Admin Messages</string>
    <string name="guest">Guest</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="refine_results">Refine Results</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="apply_filter">Apply Filters</string>
    <string name="design_hint">System will show design according to your machine requirements.</string>
    <string name="machine_support_format">Which file format does support in your machine?</string>
    <string name="step_count">1 of 3 steps</string>
    <string name="step_count2">2 of 3 steps</string>
    <string name="step_count3">3 of 3 steps</string>
    <string name="cat_support_format">In which category you are working?</string>
    <string name="subcat_support_format">In Which saree category you are working?</string>
    <string name="item_detail">Item Detail</string>
    <string name="code">Code :<![CDATA[<b><font color=#33C1FF> %1$s</font></b>]]></string>
    <string name="stitch">Stitch :<![CDATA[<b><font color=#33C1FF> %1$s</font></b>]]></string>
    <string name="width">Width :<![CDATA[<b><font color=#33C1FF> %1$s</font></b>]]></string>
    <string name="height">Height :<![CDATA[<b><font color=#33C1FF> %1$s</font></b>]]></string>
    <string name="needle">Needle :<![CDATA[<b><font color=#33C1FF> %1$s</font></b>]]></string>
    <!--    <string name="code">Code :<font color='#33C1FF'> %1$s</font></string>-->
    <string name="download">Download</string>
    <string name="category_name">Category Name</string>
    <string name="sign_in_">Sign in ?</string>
</resources>