<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/home"
                android:icon="@drawable/ic_home"
                android:title="@string/home" />
            <item
                android:id="@+id/profile"
                android:icon="@drawable/ic_user"
                android:iconTint="#7a7a7a"
                android:title="@string/my_profile" />

            <item
                android:id="@+id/about_us"
                android:icon="@drawable/ic_about"
                android:title="@string/about_us" />

            <item
                android:id="@+id/file_format"
                android:icon="@drawable/ic_file_format"
                android:title="@string/my_file_formats" />
            <item
                android:id="@+id/admin_message"
                android:icon="@drawable/ic_admin_message"
                android:title="@string/admin_message" />

            <item
                android:id="@+id/downloaded_design"
                android:icon="@drawable/ic_download"
                android:title="@string/downloaded_files" />

            <item
                android:id="@+id/how_to_use"
                android:icon="@drawable/ic_question"
                android:title="@string/how_to_use_" />

            <item
                android:id="@+id/contact_us"
                android:icon="@drawable/ic_call"
                android:title="@string/contact_us"
                android:iconTint="#7a7a7a"/>

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_log_out"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>