<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:padding="8dp"
    android:paddingBottom="8dp"
    android:paddingEnd="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    tools:context=".view.SignUpActivity">


    <TextView
        android:layout_alignParentEnd="true"
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/skip"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="312dp"
        tools:layout_editor_absoluteY="-2dp"
        app:drawableEndCompat="@drawable/ic_right_arrow" />

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_skip"
        android:gravity="center"
        android:textSize="24sp"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <EditText
        android:layout_below="@+id/textView2"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_user"
        android:layout_margin="20dp"
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_trans"
        android:ems="10"
        android:textSize="14sp"

        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:textSize="14sp"

        android:layout_below="@+id/editTextTextPersonName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:id="@+id/countryCodeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="+91"
        android:background="@drawable/rect_trans"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="234dp" />

    <EditText
        android:layout_below="@+id/countryCodeTV"
        android:layout_margin="20dp"
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:textSize="14sp"

        android:layout_height="wrap_content"
        android:background="@drawable/rect_trans"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_call"
        android:ems="10"
        android:hint="@string/enter_your_mobile_number"
        android:inputType="phone"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="322dp" />

    <TextView
        android:layout_below="@+id/et_phone"
        android:id="@+id/tv_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center"
        android:text="@string/by_creating_an_account_you_agree_to_our_terms_of_services_and_privacy_policy"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:lineSpacingExtra="5dp"  />

    <Button
        android:layout_below="@+id/tv_create"
        android:onClick="openLoginPage"
        android:background="@drawable/btn_white"
        android:id="@+id/signUpbutton"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/create_an_account" />

    <TextView
        android:layout_centerHorizontal="true"
         android:padding="10dp"
        android:id="@+id/signinTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:onClick="openLoginPage"
        android:text="Sign in ?"
        android:layout_below="@+id/signUpbutton"
        android:textSize="18sp"

        android:textColor="@color/white"  />


</RelativeLayout>